Criando a interface do projeto - estilo

--- a/index.html
+++ b/index.html
@@ -8,6 +8,27 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <div class="box-form">
+    <form>
+
+        <h2>Buscar endereços</h2>
+
+        <label for="cep">CEP</label>
+        <input id="cep" type="text">
+
+        <label for="rua">Rua</label>
+        <input id="rua" type="text">
+
+        <label for="bairro">Bairro</label>
+        <input id="bairro" type="text">
+
+        <label for="cidade">Cidade</label>
+        <input id="cidade" type="text">
+
+        <label for="estado">Estado</label>
+        <input id="estado" type="text">
+       
+    </form>
+</div>
 </body>
 </html>
