Criando ligacao do HTML com JS e criando a metodo que consome os dados da API e preenche os campos do formulario automaicamente

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <h2>Buscar endereços</h2>
 
         <label for="cep">CEP</label>
-        <input id="cep" type="text">
+        <input id="cep" type="text" onkeyup="inserirDadosApi()">
 
         <label for="rua">Rua</label>
         <input id="rua" type="text">
@@ -29,6 +29,8 @@
         <input id="estado" type="text">
        
     </form>
+
+    <script src="index.js"></script>
 </div>
 </body>
 </html>
